<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/nav_view_location" />
        <item
            android:id="@+id/nav_traffic"
            android:icon="@drawable/ic_traffic_black_24dp"
            android:title="@string/nav_view_traffic" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/nav_view_events" />
        <item
            android:id="@+id/nav_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/nav_view_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Share" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            -->
        </menu>
    </item>

</menu>
